--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node server"
   },
   "dependencies": {
+    "everyauth": "https://github.com/bnoguchi/everyauth/tarball/express3",
     "express": "~3.1.0",
     "jade": "*",
     "less-middleware": "*",
     "nconf": "~0.6.7",
-    "socket.io": "~0.9.13",
-    "everyauth": "https://github.com/bnoguchi/everyauth/tarball/express3",
-    "recaptcha": "~1.2.0"
+    "node-cron": "^1.2.1",
+    "recaptcha": "~1.2.0",
+    "socket.io": "~0.9.13"
   },
   "noAnalyze": true,
   "license": "Apache",
