--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ charset = utf-8
 indent_size = 4
 indent_style = space
 
-[{*.twig,*.html,*.json,*.js,*.css,*.scss,*.pug}]
+[{*.twig,*.html,*.json,*.css,*.scss,*.pug}]
 indent_style = space
 indent_size = 2
