--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~3.1.0",
     "jade": "*",
     "less-middleware": "*",
+    "moment": "^2.19.2",
     "mongoose": "^4.13.4",
     "nconf": "~0.6.7",
     "recaptcha": "~1.2.0",
