--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-mongo": "^2.0.0",
     "everyauth": "https://github.com/bnoguchi/everyauth/tarball/express3",
     "express": "~3.1.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "jade": "*",
     "less-middleware": "*",
